force-app/main/default/objects/BAMExternalOnboardingRequest__c/BAMExternalOnboardingRequest__c.object-meta.xml
<CustomObject>
    <description>This object stores a record of each Merchant Portal onboarding request sent to Camunda and its current status. This provides the ability to view the status of requests.  This data is also used to determine if there have been changes to a Contact Application Role or Linked Entity since the last successfully processed request.</description>
    <label>External Onboarding Request</label>
    <nameField>
        <displayFormat>BEOR-{000000}</displayFormat>
        <label>External Onboarding Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Onboarding Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>