force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related application record</description>
    <label>Application</label>
    <referenceTo>BAMApplication__c</referenceTo>
    <relationshipLabel>External Onboarding Requests</relationshipLabel>
    <relationshipName>applications</relationshipName>
    <type>Lookup</type>
</CustomField>