force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <formula>IF( ISBLANK(Application__c), Contact_Application__r.Application__r.Name, Application__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Name</label>
    <type>Text</type>
</CustomField>