force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact onboarding request relates to. Set Required = false</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>External Onboarding Requests</relationshipLabel>
    <relationshipName>External_Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>