force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Contact_Application__c.field-meta.xml
<CustomField>
    <fullName>Contact_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Contact Application</description>
    <label>BAM Contact Application</label>
    <referenceTo>BAMContactApplication__c</referenceTo>
    <relationshipName>BAM_External_Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>