force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/CSSOFulfilledDateTime__c.field-meta.xml
<CustomField>
    <fullName>CSSOFulfilledDateTime__c</fullName>
    <description>Camunda CSSO fulfilled date, this will be filled based on the response from camunda. Status = &apos;fulfilled&apos; and Type = &apos;CSSO&apos; on the platform event</description>
    <label>CSSO Fulfilled Date Time</label>
    <type>DateTime</type>
</CustomField>