force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>The error received from the remote system</description>
    <inlineHelpText>The error received from the remote system</inlineHelpText>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>