force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>When the request was submitted</description>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>