force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Request_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Object_Id__c</fullName>
    <description>Capture the record Id of requested record  for  Billing Account Creation Integration</description>
    <label>Request Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>