force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Request_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Object_Name__c</fullName>
    <description>Capture the Object Name for  Billing Account Creation Integration</description>
    <label>Request Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>