force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>A copy of the request payload sent to Camunda</description>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>