force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>The date time the provisioning response we received from Camunda</description>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>