force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <description>A copy of the response payload returned from Camunda</description>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>