force-app/main/default/objects/BAMExternalOnboardingRequest__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of request, either Provision or Deprovision</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provision</fullName>
            </value>
            <value>
                <fullName>Deprovision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>