force-app/main/default/objects/BAMExternalOnboardingRequest__c/recordTypes/BAM.recordType-meta.xml
<RecordType>
    <fullName>BAM</fullName>
    <active>true</active>
    <description>All onboarding requests related to Business Access Management capability.</description>
    <label>BAM</label>
</RecordType>