force-app/main/default/objects/BAMExternalOnboardingRequest__c/recordTypes/Billing_Account_Creation.recordType-meta.xml
<RecordType>
    <fullName>Billing_Account_Creation</fullName>
    <active>true</active>
    <description>Billing Account Creation Process</description>
    <label>Billing Account Creation</label>
</RecordType>