force-app/main/default/objects/BAMExternalOnboardingRequest__c/recordTypes/PS.recordType-meta.xml
<RecordType>
    <fullName>PS</fullName>
    <active>true</active>
    <description>Parcel Send Onboarding process</description>
    <label>Parcel Send Onboarding</label>
</RecordType>