force-app/main/default/objects/BAMExternalOnboardingRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Request_Date__c</columns>
    <columns>Response_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Application_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Contact_Application__c</columns>
    <columns>Type__c</columns>
    <columns>ExpiredResponse__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>