force-app/main/default/objects/BAMExternalOnboardingRequest__c/listViews/Avo.listView-meta.xml
<ListView>
    <fullName>Avo</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Application_Name__c</columns>
    <columns>Contact_Application__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Response_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>startsWith</operation>
        <value>Avo</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>startsWith</operation>
        <value>Kadel</value>
    </filters>
    <label>Avo</label>
    <language>en_US</language>
</ListView>