force-app/main/default/objects/BAMExternalOnboardingRequest__c/listViews/BEOR_created_TODAY.listView-meta.xml
<ListView>
    <fullName>BEOR_created_TODAY</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>Request_Object_Id__c</columns>
    <columns>Request_Object_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Target_System__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BAMExternalOnboardingRequest__c.Billing_Account_Creation</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Target_System__c</field>
        <operation>equals</operation>
        <value>TEAM</value>
    </filters>
    <label>BEOR created TODAY</label>
</ListView>