force-app/main/default/objects/BAMExternalOnboardingRequest__c/listViews/Terry.listView-meta.xml
<ListView>
    <fullName>Terry</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Application_Name__c</columns>
    <columns>Contact_Application__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Response_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Terry Telstra</value>
    </filters>
    <label>Terry</label>
    <language>en_US</language>
</ListView>