force-app/main/default/objects/BAMExternalOnboardingRequest__c/listViews/Today2.listView-meta.xml
<ListView>
    <fullName>Today2</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Application_Name__c</columns>
    <columns>Contact_Application__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Response_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today2</label>
    <language>en_US</language>
</ListView>